// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas con <GifGrid /> debe mostrar <GifGrid /> correctamente 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__rubberBand"
  >
    One Punch Man
  </h3>
  <div
    className="card-grid"
  >
    <p
      className="animate__animated animate__rubberBand"
    >
      Loading
    </p>
  </div>
</Fragment>
`;

exports[`Pruebas con <GifGrid /> debe mostrar item cuando se cargan imagenes useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__rubberBand"
  >
    One Punch Man
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="titulo we"
      url="htyps://studiandopapu.com"
    />
    <GifGridItem
      id="123"
      key="123"
      title="titulo we"
      url="htyps://studiandopapu.com"
    />
  </div>
</Fragment>
`;
